--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -34,6 +34,9 @@ scrape_configs:
     static_configs:
       - targets: ['pushgateway:9091']
 
+  - job_name: 'mysql-exporter'
+    static_configs:
+      - targets: ['mysql-exporter:9104']
 
 alerting:
   alertmanagers:
