--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -36,7 +36,7 @@ scrape_configs:
 
   - job_name: 'mysql-exporter'
     static_configs:
-      - targets: ['mysql-exporter:9104']
+      - targets: ['localhost:9104']
 
 alerting:
   alertmanagers:
