changed service name

--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -9,6 +9,13 @@
     reverse_proxy cadvisor:8080
 }
 
+:8080 {
+    basicauth /* {
+        {$ADMIN_USER} {$ADMIN_PASSWORD_HASH}
+    }
+    reverse_proxy cadvisor:8080
+}
+
 :9090 {
     basicauth /* {
         {$ADMIN_USER} {$ADMIN_PASSWORD_HASH}
