--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -34,7 +34,7 @@ scrape_configs:
     static_configs:
       - targets: ['pushgateway:9091']
 
-  - job_name: 'mysql-exporter'
+  - job_name: 'mysqlexporter'
     static_configs:
       - targets: ['localhost:9104']
 
