added caddy to mysql exporter

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,8 +75,8 @@ services:
     container_name: mysqldexporter
     environment:
       - DATA_SOURCE_NAME=exporter:exporter@(10.0.0.2:3306)/
-    ports:
-      - 9104:9104
+    expose:
+      - 9104
     volumes:
       - ./mysql-exporter/.my.cnf:/root/.my.cnf
 
@@ -149,6 +149,7 @@ services:
       - "9090:9090"
       - "9093:9093"
       - "9091:9091"
+      - "9104:9104"
     volumes:
       - ./caddy:/etc/caddy
     environment:
