added nginx exporter to docprom

--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -15,6 +15,12 @@
     }
     reverse_proxy prometheus:9090
 }
+:9113 {
+    basicauth /* {
+        {$ADMIN_USER} {$ADMIN_PASSWORD_HASH}
+    }
+    reverse_proxy nginxexporter:9113
+}
 
 :9093 {
     basicauth /* {
