--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,6 +117,19 @@ services:
     labels:
       org.label-schema.group: "monitoring"
 
+  nginxexporter:
+    image: nginx/nginx-prometheus-exporter:1.1.0
+    container_name: nginxexporter
+    restart: unless-stopped
+    command:
+      - '--nginx.scrape-uri=http://monitoring.todevelop.ru:8088/stub_status'
+    expose:
+      - 9113
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
+
   portainer:
     image: portainer/portainer-ce:latest
     volumes:
@@ -136,6 +149,7 @@ services:
       - "9090:9090"
       - "9093:9093"
       - "9091:9091"
+      - "9113:9113"
     volumes:
       - ./caddy:/etc/caddy
     environment:
