--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,7 +122,7 @@ services:
     container_name: nginxexporter
     restart: unless-stopped
     command:
-      - '--nginx.scrape-uri=http://monitoring.todevelop.ru:8088/stub_status'
+      - '--nginx.scrape-uri=http://monitoring.todevelop.ru:8081/nginx_status'
     expose:
       - 9113
     networks:
