--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
 ADMIN_USER=admin
 ADMIN_PASSWORD=admin
 ADMIN_PASSWORD_HASH=$2a$14$1l.IozJx7xQRVmlkEQ32OeEEfP5mRxTpbDTCTcXRqn19gXD8YK1pO
+NGINX_STUB_STATUS=http://monitoring.todevelop.ru
