--- a/env.example
+++ b/env.example
@@ -2,3 +2,7 @@ ADMIN_USER=admin
 ADMIN_PASSWORD=admin
 ADMIN_PASSWORD_HASH=$2a$14$1l.IozJx7xQRVmlkEQ32OeEEfP5mRxTpbDTCTcXRqn19gXD8YK1pO
 NGINX_STUB_STATUS=http://monitoring.todevelop.ru
+MYSQL_HOST=10.0.0.2
+MYSQL_USER=root
+MYSQL_PASSWORD=password
+MYSQL_PORT=3306
