--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -138,8 +138,8 @@ services:
     container_name: mysqldexporter
     environment:
       - DATA_SOURCE_NAME=root:@(192.168.100.246:3306)/
-    ports:
-      - 9104:9104
+    expose:
+      - 9104
     networks:
       - monitor-net
     labels:
@@ -165,6 +165,7 @@ services:
       - "9093:9093"
       - "9091:9091"
       - "9113:9113"
+      - "9104:9104"
     volumes:
       - ./caddy:/etc/caddy
     environment:
